--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,9 +18,26 @@
                 "--ckpt", "/home/lez/m2b/models/512-depth-ema.ckpt",
                 "--depthmodel_path","/home/lez/m2b/code/DPT/weights/dpt_hybrid-midas-501f0c75.pt",
                 "--n_samples","2",
-                "--prompt","A young woman wearing with VR set, high definition, photo.",
-                "--direction","uni"
+                "--prompt","An astronaut is riding horse,high quailty,photorealistic", // "An astronaut is playing soccer on the Moon, high quailty, 4k, HDR, photorealistic",
+                "--direction","uni",
+                // "--stereo_balance","0",
+                "--deblur",
+                "--seed",//"2023",
+                "2315",
+                "--init_img","/home/lez/StereoDiffusion/ori_img/horse.jpg",
             ]
+        },
+        {
+            "name":"img2stereo",
+            "type": "python",
+            "request": "launch",
+            "program": "/home/lez/StereoDiffusion/img2stereo.py",
+            "justMyCode": true,
+            "args":[
+                "--img_path=/home/lez/StereoDiffusion/outputs/depth2stereoimg-samples/seed_2315.png",
+                "--depthmodel_path=/home/lez/StereoDiffusion/midas_models/dpt_hybrid-midas-501f0c75.pt"
+            ]
+
         },
         {
             "name": "Python: Current File",
